Reworked exception handling and classpath building slightly